--- a/code/modules/onyxchat/browserassets/css/browserOutput.css
+++ b/code/modules/onyxchat/browserassets/css/browserOutput.css
@@ -270,7 +270,7 @@ em						{font-style: normal;	font-weight: bold;}
 .ooc					{font-weight: bold;}
 .ooc img.text_tag		{width: 32px; height: 10px;}
 
-.ooc .everyone			{color: #002eb8;}
+.ooc .everyone			{color: #5353ff;}
 .ooc .looc				{color: #3a9696;}
 .ooc .elevated			{color: #2e78d9;}
 .ooc .moderator			{color: #184880;}
@@ -282,7 +282,7 @@ em						{font-style: normal;	font-weight: bold;}
 .pm  .howto				{color: #ff0000;	font-weight: bold;		font-size: 200%;}
 .pm  .in				{color: #ff0000;}
 .pm  .out				{color: #ff0000;}
-.pm  .other				{color: #0000ff;}
+.pm  .other				{color: #5353ff;}
 
 /* Admin: Channels */
 .mod_channel			{color: #735638;	font-weight: bold;}
