--- a/nano/templates/supply.tmpl
+++ b/nano/templates/supply.tmpl
@@ -127,16 +127,14 @@
 {{else data.screen == 5}}
 	<div class="item">
 		<table style="width:100%">
-			<tr><th style="width:10%">Item<th style="width:70%">Description</th><th style="width:10%">Progress<th style="width:10%">Payment
-				<div style="text-align:center;">
+			<tr><th style="width:20%">Item<th style="width:60%">Description</th><th style="width:10%">Progress<th style="width:10%">Payment
 				{{for data.orders}}
 					<tr>
 					<td>{{:value.order_name}}
 					<td>{{:value.order_desc}}
-					<td>{{:value.order_progress}}/{{:value.order_max_progress}}
-					<td>{{:value.order_cost}}
+					<span><td>{{:value.order_progress}}/{{:value.order_max_progress}}</span>
+					<span><td>{{:value.order_cost}} Cr.</span>
 				{{/for}}
-				</div>
 		</table>
 	</div>
 {{/if}}
